chore: add prefix script and skipped links

--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "compile-protos": "compileProtos src",
     "docs": "jsdoc -c .jsdoc.js",
     "predocs-test": "npm run docs",
-    "prelint": "cd samples; npm link ../; npm i",
     "docs-test": "linkinator docs",
+    "prefix": "cd samples; npm link ../; npm i",
     "fix": "gts fix",
+    "prelint": "cd samples; npm link ../; npm i",
     "lint": "gts check",
     "prepare": "npm run compile-protos && npm run compile",
     "samples-test": "cd samples/ && npm link ../ && npm test && cd ../",
